fixed header/hero layout by using align and justify instead of flex property

--- a/style.css
+++ b/style.css
@@ -1,44 +1,56 @@
 *{
     outline: 2px solid red;
-    box-sizing: border-box;
 }
 
 .header-hero{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    font-family: 'Helvetica';
     background-color: #1F2937;
-    width: 100%;
 }
 
 .header{
     display: flex;
-    align-items: center; /* Center vertically */
-    justify-content: space-between; /* Space between logo and links */
-    padding: 0 20px; /* Add some padding for spacing */
+    align-items: center;
+    padding: 10px 40px;
+    justify-content: space-between;
 }
 
 .logo{
-    color: #F9FAF8;
-    flex: 1 1 auto;
-    text-align: center;
+    font-size: 24px;
+    color: #E5E7EB;
+
 }
-.links{
-    color: #F9FAF8;
-    flex: 1 1 auto;
-    text-align: center;
+
+.header-link{
+    display: flex;
+    gap: 20px;
 
 }
 
 .hero{
     display: flex;
-    justify-content: space-evenly;
-    color: #F9FAF8;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 40px;
 }
 
 .hero-text{
     display: flex;
     flex-direction: column;
-    color:#E5E7EB;
+    align-items: flex-start;
 }
-    
+.hero-main, .hero-sub, .hero-button{
+    margin: 5px;
+}
+.hero-main{
+    font-size: 48px;
+    color: #F9FAF8;
+}
+.hero-sub, .header-link{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.hero-button{
+    color: #3882F6;
+}
